--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ iniconfig==2.0.0
 injector==0.22.0
 kombu==5.4.0
 packaging==24.1
+Pillow==10.4.0
 pluggy==1.5.0
 prompt_toolkit==3.0.47
 psycopg2-binary==2.9.9
